messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service-blue
spec:
  selector:
    app: messaging-app
    version: blue
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service-green
spec:
  selector:
    app: messaging-app
    version: green
  ports:
    - port: 80
      targetPort: 8000
