messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: http://localhost:8000
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service
            port:
              number: 8000
